[gd_scene load_steps=3 format=3 uid="uid://c2nn7ki83yl6j"]

[ext_resource type="Texture2D" uid="uid://dnswhwlkqm24a" path="res://Calculators/CalculatorBackground.png" id="1_crufg"]
[ext_resource type="Script" uid="uid://dbblkgs0ac6gl" path="res://Calculators/UnitConverter/unit_converter.gd" id="1_yw4sb"]

[node name="UnitConverter" type="Node2D"]
script = ExtResource("1_yw4sb")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
offset_right = 320.0
offset_bottom = 256.0
texture = ExtResource("1_crufg")
patch_margin_left = 9
patch_margin_top = 9
patch_margin_right = 9
patch_margin_bottom = 9
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="Constants" type="Node2D" parent="."]

[node name="Label" type="Label" parent="Constants"]
offset_top = 16.0
offset_right = 320.0
offset_bottom = 39.0
text = "Unit Convertor
(14 digits of accurate precision)"
horizontal_alignment = 1
vertical_alignment = 1

[node name="InputLeft" type="TextEdit" parent="."]
offset_left = 16.0
offset_top = 64.0
offset_right = 128.0
offset_bottom = 104.0
placeholder_text = "Units"

[node name="InputRight" type="TextEdit" parent="."]
offset_left = 192.0
offset_top = 64.0
offset_right = 304.0
offset_bottom = 104.0
placeholder_text = "Units"

[node name="TypeSelector" type="MenuButton" parent="."]
offset_left = 16.0
offset_top = 112.0
offset_right = 128.0
offset_bottom = 144.0
text = "Area"
flat = false
item_count = 6
popup/item_0/text = "Force (N)"
popup/item_0/id = 2
popup/item_1/text = "Pressure (Pa)"
popup/item_1/id = 3
popup/item_2/text = "Mass (Kg)"
popup/item_2/id = 4
popup/item_3/text = "Length (m)"
popup/item_3/id = 1
popup/item_4/text = "Area (m^2)"
popup/item_4/id = 0
popup/item_5/text = "Volume (m^3)"
popup/item_5/id = 5

[node name="LeftUnits" type="MenuButton" parent="."]
offset_left = 16.0
offset_top = 160.0
offset_right = 128.0
offset_bottom = 192.0
text = "PLACEHOLDER"
flat = false

[node name="RightUnits" type="MenuButton" parent="."]
offset_left = 192.0
offset_top = 160.0
offset_right = 304.0
offset_bottom = 192.0
text = "PLACEHOLDER"
flat = false

[node name="PopupMenu" type="PopupMenu" parent="."]
item_count = 1
item_0/id = 0

[connection signal="text_changed" from="InputLeft" to="." method="_on_input_left_text_changed"]
[connection signal="text_changed" from="InputRight" to="." method="_on_input_right_text_changed"]
